added new components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,12 @@
   </div>
   <div class="row">
     <div class="col-sm-3">
-      Left 
+      <div class="app-sidebar-links mt-3"></div>
     </div>
-    <div class="col-sm-6">
-      Center
+    <div class="col-sm-6 mt-3">
+      <div class="app-content-center"></div>
     </div>
+    <!-- Sidebar Right -->
     <div class="col-sm-3 mt-3">
       <app-card-friends></app-card-friends>
       <div class="app-card-search mt-3"></div>
